@@ -22,6 +22,7 @@ This release includes the following bugfixes:
  o memory leak with HTTP GSS/kerberos authentication
  o removed the default use of "Pragma: no-cache"
  o fix SCP/SFTP busyloop by using a new libssh2 0.19 function
+ o bad fclose() after a fatal error in cookie code
 
 This release includes the following known bugs:
 
@@ -31,6 +32,6 @@ This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
  Yang Tse, Daniel Fandrich, Jim Meyering, Christian Krause, Andreas Wurf,
- Markus Koetter, Josef Wolf, Vlad Grachov
+ Markus Koetter, Josef Wolf, Vlad Grachov, Pawel Kierski
 
         Thanks! (and sorry if I forgot to mention someone)
